<resources>
    <string name="app_name">radiocarabaya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_website">Sitio Web</string>
    <string name="menu_send_message">Enviar Mensaje</string>
    <string name="menu_call_radio">Llamar a la radio</string>
    <string name="menu_exit">Salir</string>
    <string name="radio_carabaya">Radio Carabaya</string>
    <string name="puno_peru">Puno - Perú</string>
    <string name="senal_pueblos">Señal de los pueblos</string>
</resources>