<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/song_icon"
            android:title="@string/menu_inicio" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_web_24"
            android:title="@string/menu_website" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_send_message" />
        <item
            android:id="@+id/nav_llamada"
            android:icon="@android:drawable/stat_sys_phone_call"
            android:title="@string/menu_call_radio" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>
</menu>