<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.felixdeveloperand.radiocarabaya.ui.radio.RadioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_radio" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.felixdeveloperand.radiocarabaya.ui.website.WebsiteFragment"
        android:label="@string/menu_website"
        tools:layout="@layout/fragment_website" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.felixdeveloperand.radiocarabaya.ui.message.MessageFragment"
        android:label="@string/menu_send_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/nav_llamada"
        android:name="com.felixdeveloperand.radiocarabaya.ui.llamada.LlamadaFragment"
        android:label="@string/menu_call_radio"
        tools:layout="@layout/fragment_llamada" />
</navigation>