<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/allincapac"
    tools:context=".ui.radio.RadioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:layout_margin="50dp"
            android:src="@mipmap/ic_radio_launcher" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/radio_carabaya"
            android:src="@drawable/song_icon" />

        <ProgressBar
            android:id="@+id/pbCircular"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/CP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puno_peru"
            android:textColor="@color/design_default_color_secondary"
            android:gravity="center"
            android:textSize="25sp"
            android:src="@drawable/song_icon" />

        <TextView
            android:id="@+id/Genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/senal_pueblos"
            android:textSize="20sp"
            android:src="@drawable/song_icon" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="13dp"
            android:text="Play" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="13dp"
            android:gravity="center"
            android:text="Pause" />

        <Button
            android:id="@+id/buttonCloseApp"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="13dp"
            android:gravity="center"
            android:text="Cerrar" />

    </LinearLayout>

</LinearLayout>
